--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "prettier": "^1.19.1",
     "prettier-airbnb-config": "^1.0.0"
